Unfinished version with app-like menu

--- a/source/index.html
+++ b/source/index.html
@@ -7,5 +7,6 @@
   <include src="source/parts/header.html"></include>
   <include src="source/parts/main.html"></include>
   <include src="source/parts/footer.html"></include>
+  <script src="js/index.bundle.js"></script>
 </body>
 </html>
