Markup is done, except footer

--- a/source/parts/footer.html
+++ b/source/parts/footer.html
@@ -1,5 +1,9 @@
 <footer class="page__footer footer">
   <div class="container">
-    fooooooter
+    <div class="footer__note">
+      <p class="footer__lead">
+      </p>
+      form.footer__form.form
+    </div>
   </div>
 </footer>
