--- a/source/parts/header.html
+++ b/source/parts/header.html
@@ -1,41 +1,8 @@
 <header class="page__header header">
   <div class="container">
-    <nav class="header__nav">
-      <ul class="header__list">
-        <li class="header__item">
-          <a class="header__link" href="tel:+79998596915">
-            <svg class="header__link-icon" aria-hidden="true">
-              <use href="img/sprite.svg#icon-tel"></use>
-            </svg>
-            <span class="header__link-text">Позвонить</span>
-          </a>
-        </li>
-        <li class="header__item">
-          <a class="header__link" href="#review">
-            <svg class="header__link-icon" aria-hidden="true">
-              <use href="img/sprite.svg#icon-review"></use>
-            </svg>
-            <span class="header__link-text">Отзывы</span>
-          </a>
-        </li>
-        <li class="header__item">
-          <a class="header__link" href="#gallery">
-            <svg class="header__link-icon" aria-hidden="true">
-              <use href="img/sprite.svg#icon-result"></use>
-            </svg>
-            <span class="header__link-text">Результаты</span>
-          </a>
-        </li>
-        <li class="header__item">
-          <a class="header__link" href="#price">
-            <svg class="header__link-icon" aria-hidden="true">
-              <use href="img/sprite.svg#icon-price"></use>
-
-            </svg>
-            <span class="header__link-text">Цены</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <div class="header__wrapper">
+      <a class="header__logo">прокоп24.рф</a>
+      <a class="header__tel" href="tel:+79998596915">+7 (999) 859-69-15</a>
+    </div>
   </div>
 </header>
