--- a/source/parts/footer.html
+++ b/source/parts/footer.html
@@ -1,9 +1,30 @@
 <footer class="page__footer footer">
-  <div class="container">
-    <div class="footer__note">
-      <p class="footer__lead">
-      </p>
-      form.footer__form.form
+    <div class="container">
+    <div class="footer__wrapper">
+      <ul class="footer__social">
+        <li class="footer__social-item">
+          <a class="footer__social-link footer__social-link--instagram" href="https://www.instagram.com/geon.ex_">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a class="footer__social-link footer__social-link--telegram" href="https://t.me/greeg_reek">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a class="footer__social-link footer__social-link--whatsapp" href="https://wa.me/89998596915">
+            <span class="visually-hidden">Ватсап</span>
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a class="footer__social-link footer__social-link--avito" href="https://www.avito.ru/balashiha/predlozheniya_uslug/miniekskavator_v_arendu_1993870067">
+            <span class="visually-hidden">Авито</span>
+          </a>
+        </li>
+      </ul>
+      <a class="footer__logo">прокоп24.рф</a>
+      <p class="footer__copy">&copy;&nbsp;2021</p>
     </div>
   </div>
 </footer>
