--- a/source/parts/head.html
+++ b/source/parts/head.html
@@ -2,6 +2,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width = device-width, initial-scale = 1">
 <link rel="icon" type="image/png" href="img/favicon.png" sizes="64x64">
+<link rel="preload" href="fonts/pt-sans-400.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="fonts/pt-sans-700.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="stylesheet" href="css/style.min.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
