--- a/source/parts/head.html
+++ b/source/parts/head.html
@@ -1,7 +1,20 @@
 <title>Земляные работы в Москве и области</title>
+<meta name="robots" content="noindex, nofollow">
 <meta charset="utf-8">
 <meta name="viewport" content="width = device-width, initial-scale = 1">
-<link rel="icon" type="image/png" href="img/favicon.png" sizes="64x64">
+
+<meta property="og:title" content="прокоп24.рф">
+<meta property="og:url" content="http://xn--24-1lcpbdde.xn--p1ai/">
+<meta property="og:description" content="Земляные работы в Москве и Московской области.">
+<meta property="og:site_name" content="прокоп24.рф">
+<meta property="og:image" content="http://xn--24-1lcpbdde.xn--p1ai/img/title-image-900.jpg">
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="900" />
+<meta property="og:image:height" content="675" />
+<meta property="og:image:alt" content="Логотип прокоп24" />
+<meta name="twitter:card" content="summary">
+
+<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 <link rel="preload" href="fonts/pt-sans-400.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="fonts/pt-sans-700.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="stylesheet" href="css/style.min.css">
