Some random small changes

--- a/source/parts/main.html
+++ b/source/parts/main.html
@@ -13,12 +13,13 @@
             img/title-image-900.webp 900w">
         <img
           class="main__title-image"
-          src="img/title-image-600.jpg"
-          alt="Молодой мужчина работает на мини-экскаваторе и улыбается"
           sizes="(min-width: 900px) 50vw, 100vw"
           srcset="img/title-image-400.jpg 400w,
           img/title-image-600.jpg 600w,
-          img/title-image-900.jpg 900w">
+          img/title-image-900.jpg 900w"
+          src="img/title-image-600.jpg"
+          width="600" height="450"
+          alt="Молодой мужчина работает на мини-экскаваторе и улыбается">
       </picture>
       <form class="main__form form" action="https://echo.htmlacademy.ru/courses" method="POST" enctype="multipart/form-data">
         <div class="form__label-wrapper">
@@ -119,7 +120,8 @@
                     srcset="img/result-1-400.jpg 400w,
                       img/result-1-600.jpg 600w,
                       img/result-1-900.jpg 900w"
-                    src="img/result-1.jpg"
+                    src="img/result-1-600.jpg"
+                    width="600" height="800"
                     alt="Выкопанная траншея с грунтовыми водами"
                     loading="lazy">
                 </picture>
@@ -141,7 +143,8 @@
                     srcset="img/result-2-400.jpg 400w,
                       img/result-2-600.jpg 600w,
                       img/result-2-900.jpg 900w"
-                    src="img/result-2.jpg"
+                    src="img/result-2-600.jpg"
+                    width="600" height="800"
                     alt="Мини-экскаватор на фоне выкопанной траншеи"
                     loading="lazy">
                 </picture>
@@ -165,7 +168,8 @@
                       img/result-3-600.jpg 600w,
                       img/result-3-900.jpg 900w,
                       img/result-3-1200.jpg 1200w"
-                    src="img/result-3.jpg"
+                    src="img/result-3-600.jpg"
+                    width="600" height="450"
                     alt="Мини-экскаватор и высокая земляная куча"
                     loading="lazy">
                 </picture>
@@ -189,7 +193,8 @@
                       img/result-4-600.jpg 600w,
                       img/result-4-900.jpg 900w,
                       img/result-4-1200.jpg 1200w"
-                    src="img/result-4.jpg"
+                    src="img/result-4-600.jpg"
+                    width="600" height="450"
                     alt="Крупная прямоугольная треншея, заполненная водой"
                     loading="lazy">
                 </picture>
@@ -213,7 +218,8 @@
                       img/result-5-600.jpg 600w,
                       img/result-5-900.jpg 900w,
                       img/result-5-1200.jpg 1200w"
-                    src="img/result-5.jpg"
+                    src="img/result-5-600.jpg"
+                    width="600" height="450"
                     alt="Григорий управляет мини-экскаватором"
                     loading="lazy">
                 </picture>
@@ -237,7 +243,8 @@
                       img/result-6-600.jpg 600w,
                       img/result-6-900.jpg 900w,
                       img/result-6-1200.jpg 1200w"
-                    src="img/result-6.jpg"
+                    src="img/result-6-600.jpg"
+                    width="600" height="450"
                     alt="Курпный пень, извлеченный из земли"
                     loading="lazy">
                 </picture>
