Add popup and form validation

--- a/source/parts/footer.html
+++ b/source/parts/footer.html
@@ -3,22 +3,22 @@
     <div class="footer__wrapper">
       <ul class="footer__social">
         <li class="footer__social-item">
-          <a class="footer__social-link footer__social-link--instagram" href="https://www.instagram.com/geon.ex_">
+          <a class="footer__social-link footer__social-link--instagram" href="https://www.instagram.com/geon.ex_" target="_blank">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a class="footer__social-link footer__social-link--telegram" href="https://t.me/greeg_reek">
+          <a class="footer__social-link footer__social-link--telegram" href="https://t.me/greeg_reek" target="_blank">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a class="footer__social-link footer__social-link--whatsapp" href="https://wa.me/89998596915">
+          <a class="footer__social-link footer__social-link--whatsapp" href="https://wa.me/+79998596915" target="_blank">
             <span class="visually-hidden">Ватсап</span>
           </a>
         </li>
         <li class="footer__social-item">
-          <a class="footer__social-link footer__social-link--avito" href="https://www.avito.ru/balashiha/predlozheniya_uslug/miniekskavator_v_arendu_1993870067">
+          <a class="footer__social-link footer__social-link--avito" href="https://www.avito.ru/balashiha/predlozheniya_uslug/miniekskavator_v_arendu_1993870067" target="_blank">
             <span class="visually-hidden">Авито</span>
           </a>
         </li>
