--- a/source/parts/head.html
+++ b/source/parts/head.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width = device-width, initial-scale = 1">
 
 <meta property="og:title" content="прокоп24.рф">
-<meta property="og:url" content="http://xn--24-1lcpbdde.xn--p1ai/">
+<meta property="og:url" content="http://прокоп24.рф">
 <meta property="og:description" content="Земляные работы в Москве и Московской области.">
 <meta property="og:site_name" content="прокоп24.рф">
 <meta property="og:image" content="http://xn--24-1lcpbdde.xn--p1ai/img/title-image-900.jpg">
