--- a/source/parts/main.html
+++ b/source/parts/main.html
@@ -25,17 +25,19 @@
         <div class="form__label-wrapper">
           <label class="form__label">
             <input class="form__input" type="tel" name="tel" placeholder="+7 (999) 859-69-15" required>
-            <span class="form__label-text">Ваш номер телефона</span>
+            <span class="form__label-text">
+              Ваш номер телефона
+              <span class="form__label-text-accent">+7 (999) 859-69-15</span>
+            </span>
           </label>
           <button class="form__reset" type="reset">
             <span class="visually-hidden">Очистить</span>
           </button>
         </div>
         <div class="form__submit-wrapper">
-          <button class="form__submit" type="submit">Заказать звонок</button>
+          <button class="form__submit button" type="submit">Заказать звонок</button>
         </div>
-      </form>
-      <!-- <a class="form__tel-link" href="tel:+79998596915">Позвонить</a> -->
+    </form>
     </div>
     <section class="main__section section service">
       <h2 class="visually-hidden">Наши услуги</h2>
@@ -91,10 +93,9 @@
               </button>
             </div>
             <div class="form__submit-wrapper">
-              <button class="form__submit" type="submit">Заказать звонок</button>
+              <button class="form__submit button" type="submit">Заказать звонок</button>
             </div>
         </form>
-        <!-- <a class="service__form__tel-link" href="tel:+79998596915">Позвонить</a> -->
       </div>
     </section>
     <section class="main__section section result">
@@ -396,7 +397,7 @@
             </button>
           </div>
           <div class="form__submit-wrapper">
-            <button class="form__submit" type="submit">Заказать звонок</button>
+            <button class="form__submit button" type="submit">Заказать звонок</button>
           </div>
         </form>
         <a class="book__tel" href="tel:+79998596915">+7 (999) 859-69-15</a>
