Add slider no-js styling

--- a/source/parts/main.html
+++ b/source/parts/main.html
@@ -100,7 +100,7 @@
       <p class="section__lead">Ход моей работы, от&nbsp;прибытия до&nbsp;конечного
         <b class="section__lead-accent">результата</b>, можно посмотреть в&nbsp;галерее.
       </p>
-      <div class="splide splide--result">
+      <div class="splide splide--result splide--no-js">
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide">
@@ -258,7 +258,7 @@
       <p class="section__lead">За время работы успел выполнить более 30&nbsp;заказов и&nbsp;получить
         <b class="section__lead-accent">несколько отзывов</b> от&nbsp;клиентов
       </p>
-      <div class="splide splide--review">
+      <div class="splide splide--review splide--no-js">
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide">
