--- a/source/parts/head.html
+++ b/source/parts/head.html
@@ -1,13 +1,15 @@
-<title>Земляные работы в Москве и области</title>
-<meta name="robots" content="noindex, nofollow">
+<title>Земляные работы в Москве и Московской области</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width = device-width, initial-scale = 1">
 
+<meta name="robots" content="index, follow">
 <meta property="og:title" content="прокоп24.рф">
-<meta property="og:url" content="http://прокоп24.рф">
-<meta property="og:description" content="Земляные работы в Москве и Московской области.">
+<meta property="og:description" content="Все виды земляных работ с использованием мини-экскаватора. Установка дренажных систем, прокладка траншей для коммуникаций, монтаж септиков, корчевание пней.">
+<meta property="og:url" content="https://прокоп24.рф">
+<meta property="og:type" content="website">
 <meta property="og:site_name" content="прокоп24.рф">
-<meta property="og:image" content="http://xn--24-1lcpbdde.xn--p1ai/img/title-image-900.jpg">
+<meta property="og:locale" content="ru_RU">
+<meta property="og:image" content="https://xn--24-1lcpbdde.xn--p1ai/img/title-image-900.jpg">
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="900" />
 <meta property="og:image:height" content="675" />
