--- a/source/parts/main.html
+++ b/source/parts/main.html
@@ -21,7 +21,7 @@
           width="600" height="450"
           alt="Молодой мужчина работает на мини-экскаваторе и улыбается">
       </picture>
-      <form class="main__form form" action="" method="POST" enctype="multipart/form-data">
+      <form class="main__form form" action="/" method="POST" enctype="multipart/form-data">
         <div class="form__label-wrapper">
           <label class="form__label">
             <input class="form__input" type="tel" name="tel" placeholder="+7 (999) 859-69-15" required>
@@ -79,7 +79,7 @@
       </table>
       <div class="service__note">
         <p class="service__note-text">Если вы не&nbsp;увидели нужной вам услуги, просто позвоните мне&nbsp;— мы всё обсудим индивидуально.</p>
-        <form class="service__form form" action="" enctype="multipart/form-data">
+        <form class="service__form form" action="/" enctype="multipart/form-data">
             <div class="form__label-wrapper form__label-wrapper--alt-background">
               <label class="form__label">
                 <input class="form__input" type="tel" name="tel" placeholder="+7 (999) 859-69-15" required>
@@ -383,7 +383,7 @@
       <h2 class="visually-hidden">Оставить заявку на&nbsp;услуги</h2>
       <p class="book__lead">Cвязаться со&nbsp;мной</p>
       <div class="book__contact-wrapper">
-        <form class="book__form form" action="" method="POST" enctype="multipart/form-data">
+        <form class="book__form form" action="/" method="POST" enctype="multipart/form-data">
           <div class="form__label-wrapper form__label-wrapper--alt-background">
             <label class="form__label">
               <input class="form__input" type="tel" name="tel" placeholder="+7 (999) 859-69-15" required>
