Change meta tags

--- a/source/parts/head.html
+++ b/source/parts/head.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width = device-width, initial-scale = 1">
 
 <meta name="robots" content="index, follow">
+<meta name="description" content="Все виды земляных работ с использованием мини-экскаватора. Установка дренажных систем, прокладка траншей для коммуникаций, монтаж септиков, корчевание пней.">
 <meta property="og:title" content="прокоп24.рф">
 <meta property="og:description" content="Все виды земляных работ с использованием мини-экскаватора. Установка дренажных систем, прокладка траншей для коммуникаций, монтаж септиков, корчевание пней.">
 <meta property="og:url" content="https://прокоп24.рф">
