Fix content typo

--- a/source/parts/header.html
+++ b/source/parts/header.html
@@ -4,5 +4,6 @@
       <a class="header__logo">прокоп24.рф</a>
       <a class="header__tel" href="tel:+79998596915">+7 (999) 859-69-15</a>
     </div>
+    <p class="visually-hidden">Все виды земляных работ с использованием мини-экскаватора.</p>
   </div>
 </header>
