--- a/source/parts/main.html
+++ b/source/parts/main.html
@@ -41,7 +41,7 @@
       <p class="section__lead">
         Здравствуйте.&thinsp;<br class="break--mobile">Меня зовут Григорий. Я&nbsp;провожу
         <b class="section__lead-accent">земляные работы любой сложности </b>
-        быстро и&nbsp;неодорого.
+        быстро и&nbsp;недорого.
       </p>
       <table class="service__table">
         <thead class="visually-hidden">
@@ -64,8 +64,8 @@
             <td class="service__table-price">от 1.000 &#8381;/м</td>
           </tr>
           <tr class="service__table-row">
-            <td class="service__table-name">Укладка коммуникаций</td>
-            <td class="service__table-price">от 700 &#8381;/м</td>
+            <td class="service__table-name">Проектирование и&nbsp;монтаж внешних инженерных сетей и&nbsp;коммуникаций</td>
+            <td class="service__table-price">от 500 &#8381;/м</td>
           </tr>
           <tr class="service__table-row">
             <td class="service__table-name">Монтаж станции биологической очистки (септика)</td>
