Add manifest & favicons

--- a/source/parts/head.html
+++ b/source/parts/head.html
@@ -11,13 +11,17 @@
 <meta property="og:site_name" content="прокоп24.рф">
 <meta property="og:locale" content="ru_RU">
 <meta property="og:image" content="https://xn--24-1lcpbdde.xn--p1ai/img/title-image-900.jpg">
-<meta property="og:image:type" content="image/jpeg" />
-<meta property="og:image:width" content="900" />
-<meta property="og:image:height" content="675" />
-<meta property="og:image:alt" content="Логотип прокоп24" />
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="900">
+<meta property="og:image:height" content="675">
+<meta property="og:image:alt" content="Логотип прокоп24">
 <meta name="twitter:card" content="summary">
 
-<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+<link rel="manifest" href="manifest.json">
+<link rel="mask-icon" href="img/icon.svg" color="black">
+<link rel="apple-touch-icon" href="img/apple-touch-icon.png" sizes="180x180">
+<link rel="icon" type="image/png" href="img/icon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="img/icon-16x16.png" sizes="16x16">
 <link rel="preload" href="fonts/pt-sans-400.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="fonts/pt-sans-700.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="stylesheet" href="css/style.min.css">
